# simple-search-engine

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Indexer/: Indexer.cpp  Indexer.hpp  Ties.cpp  Ties.hpp
lib/ParserArgument/: ParserArgument.cpp  ParserArgument.hpp
lib/Searcher/: Searcher.cpp  Searcher.hpp
tests/: CMakeLists.txt  IndexerTests.cpp  ParserArgumentTests.cpp  SearcherTests.cpp
